# the_office

./: .gitignore  pyproject.toml
the_office/data/: all_episodes.json
